<resources>
    <string name="app_name" translatable="false">BakaPlanner</string>
    <string name="setup_instance"><![CDATA[Set up your <b>bakaplanner</b> instance]]></string>
    <string name="set_up">Set Up</string>
    <string name="help">Help</string>
    <string name="must_be_url">Only valid URL is permitted.</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_with_credentials"><![CDATA[Log in with your <b>bakaplanner</b> credentials]]></string>
    <string name="log_in">Log in</string>
    <string name="username_must_be_filled">This field has to be filled</string>
    <string name="password_must_be_filled">This field has to be filled</string>
    <string name="field_must_be_filled">This field has to be filled</string>
    <string name="wrong_password">Wrong username or password</string>
    <string name="http_example_com" translatable="false">http://example.com</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log out</string>
    <string name="url">Set up URL</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="remote_exception">Remote exception</string>
    <string name="full_name" translatable="false">%1$s %2$s</string>
    <string name="email" translatable="false"><![CDATA[%1$s <font color="#7D8E9E"> | %2$s</font>]]></string>
    <string name="time_from_to" translatable="false">%1$s — %2$s</string>
    <string name="working_until_">Working until %s</string>
    <string name="happening_right_now">Happening right now</string>
    <string name="next_planned_shift">Next planned shift</string>
    <string name="day_hours_start_end" translatable="false">%1$s %2$s — %3$s</string>
    <string name="hours_start_end" translatable="false">%1$s — %2$s</string>
    <string name="later_this_week">Later this week</string>
    <string name="no_more_shifts_coming_up_this_week">No more shifts scheduled</string>
    <string name="no_more_plans_for_you">No more plans for you</string>
    <string name="not_found">Not found</string>
    <string name="contracts">Contracts</string>
    <string name="shift">Shift</string>
    <string name="employment_contract_">Employment contract #%d</string>
    <string name="valid_until">Valid until %s</string>
    <string name="active_contracts">Active contracts</string>
    <string name="inactive_contracts">Inactive contracts</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="starts">Starts %s</string>
    <string name="ends">Ends %s</string>
    <string name="ended">Ended %s</string>
    <string name="no_server_connection">Unable to connect to server</string>
    <string name="information">Information</string>
    <string name="shift_id">Shift ID</string>
    <string name="shift_hash">shift #%d</string>
    <string name="schedule_id">Schedule ID</string>
    <string name="duration">Number of hours</string>
    <string name="_h">%.2fh</string>
    <string name="_hrs">%dh</string>
    <string name="actions">Actions</string>
    <string name="sign_up">Sign Up</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="agreement_complete_">Agreement to complete a job #%d</string>
    <string name="agreement_perform_">Agreement to perform a job #%d</string>
    <string name="shifts">Shifts</string>
    <string name="no_history_for_you">Your shift history is empty</string>
    <string name="pick_schedule">Pick schedule</string>
    <string name="schedule_ids">Schedule #%d</string>
    <string name="successfully_signed_up">Successfully signed up!</string>
    <string name="ok">OK</string>
    <string name="remove_from_schedule">Remove from schedule</string>
    <string name="successfully_removed">Successfully removed from schedule!</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="unauthorized">You are not authorized to perform this</string>
    <string name="user_scheduled">User scheduled</string>
    <string name="planning">Planning</string>
    <string name="plan_week">Plan week</string>
    <string name="plan_day">Plan day</string>
    <string name="add">Add</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="add_shift_template">Add shift template</string>
    <string name="are_you_sure_you_want_to_cancel">Are you sure you want to cancel this?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="template_fragment_tag" translatable="false">TemplateFragment</string>
    <string name="add_employee_tag" translatable="false">AddEmployeeFormFragment</string>
    <string name="time_picker" translatable="false">TimePicker</string>
    <string name="break_minutes">Break</string>
    <string name="_0" translatable="false">0</string>
    <string name="break_label">Break:</string>
    <string name="min" translatable="false">min</string>
    <string name="_min">%dmin</string>
    <string name="hours_">Hours: %.2f</string>
    <string name="_no_value" translatable="false">-</string>
    <string name="duration_less_12_hours">Shift should not last more than 12 hours</string>
    <string name="break_too_long">Break is longer than shift!</string>
    <string name="this_shift_can_still_be_removed">Remove shift from schedule</string>
    <string name="you_can_remove_this_shift_from_your_schedule_if_you_intent_to_do_it_do_it_asap">You can remove this shift from your schedule. \nIf you intent to do it, do it as soon as possible.</string>
    <string name="you_can_add_this_shift_to_your_schedule">You can add this shift to your schedule!</string>
    <string name="add_to_your_schedule">Add to schedule</string>
    <string name="add_to_schedule">Add to schedule</string>
    <string name="plan_shift">Plan shift</string>
    <string name="nothing_planned_yet">Nothing planned yet!</string>
    <string name="nothing_planned_yet_week"><![CDATA[Nothing planned<br /> for <b>%s – %s</b>!]]></string>
    <string name="demand">Demand</string>
    <string name="highest">Highest</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="lowest">Lowest</string>
    <string name="high">High</string>
    <string name="set_some_demand">Set some demand value</string>
    <string name="priority">Priority</string>
    <string name="step_of_wizard"><![CDATA[<b>Step %d of %d</b>: %s]]></string>
    <string name="select_working_days">Select Working Days</string>
    <string name="plan_working_days">Plan Working Days</string>
    <string name="review">Review</string>
    <string name="adjust_shifts">Adjust Shifts</string>
    <string name="night_shift">Night shift</string>
    <string name="regular_opening_hours">Regular opening hours</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="number_of_shifts_per_day">Number of shifts per day</string>
    <string name="shift_and_break_length">Shift and break length</string>
    <string name="break_">Break</string>
    <string name="_24_hours">24 hours</string>
    <string name="check_time">Check time</string>
    <string name="shift_times">Shift times</string>
    <string name="from_to__" translatable="false">%s – %s</string>
    <string name="week">Week</string>
    <string name="working_days">Working days</string>
    <string name="shift_length">Shift length</string>
    <string name="break_length">Break length</string>
    <string name="finish">Finish</string>
    <string name="finished">Finished</string>
    <string name="submit">Submit</string>
    <string name="plan_shifts">Plan shifts</string>
    <string name="employees">Employees</string>
    <string name="organization">Organization</string>
    <string name="name"><![CDATA[%s <b>(%s)</b>]]></string>
    <string name="auto_schedule">Auto Schedule</string>
    <string name="automatic_scheduling_assigns_shifts_to_employees">Automatic scheduling assigns shifts to employees</string>
    <string name="params_set_up">Settings</string>
    <string name="do_schedule">Schedule</string>
    <string name="show_profile">Show profile</string>
    <string name="specializations">Specializations</string>
    <string name="add_specialization">Add new specialization</string>
    <string name="_name">Name</string>
    <string name="eg_cleaning">E.g. Cleaning</string>
    <string name="specialization_description"><![CDATA[This action will create a new specialization for your  organization.  Employees can be assigned later.<br/><br/>Scheduling will be done with respect to employees\' specializations (provided that any shifts are labelled with this specialization).]]> </string>
    <string name="no_specializations_in_your_organization">No specializations in your organization</string>
    <string name="no_employees">No employees</string>
    <string name="add_employees">Add Employees</string>
    <string name="general">General</string>
    <string name="add_specific_demand">Add Specific Demand</string>
    <string name="organization_name">Organization name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="e_mail">Email</string>
    <string name="password_repeat">Repeat password</string>
    <string name="add_employee">Add employee</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="submit_valid_email">Insert valid email</string>
    <string name="username_can_contain">Username can contain letters, digits and one dot</string>
    <string name="please_insert_last_name">Insert last name please</string>
    <string name="please_insert_first_name">Insert first name please</string>
    <string name="username_must_be_lowercase">Username must be lowercase</string>
    <string name="username_cannot_end_with_dot">Username cannot end with dot</string>
    <string name="must_be_at_least_6">Password must be at least 6 characters long</string>
    <string name="password_can_contain_letters_and_digits">Password can contain letters and digits</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="username_has_to_be_filled">Username must be filled</string>
    <string name="birth_date_has_to_be_filled">Birth date has to be filled</string>
    <string name="type">Type</string>
    <string name="add_contract">Add contract</string>
    <string name="work_load">Workload</string>
    <string name="first_shift">First shift</string>
    <string name="user_id">User ID</string>
    <string name="past">Past</string>
    <string name="current">Current</string>
    <string name="to_be_submitted">To be submitted</string>
    <string name="submitted">Submitted</string>
    <string name="to_be_planned">To be planned</string>
    <string name="edit_demand">Edit shift demand</string>
    <string name="indefinite_contract">Indefinite contract</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="employment_contract">Employment contract</string>
    <string name="agreement_complete">Agreement to complete a job</string>
    <string name="agreement_perform">Agreement to perform a job</string>
    <string name="coming_up_this_week">Coming up this week</string>
    <string name="after_sign_up_features">New features such as automatic scheduling will be enabled once you sign up.</string>
    <string name="log_in_to_bakaplanner">Log in to bakaplanner</string>
    <string name="no_employees_organization">No employeees in your organization</string>
    <string name="no_shifts_to_assign">No shifts to assign</string>
</resources>