<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:enabled="true"
        android:icon="@drawable/ic_mdi_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_shifts"
        android:enabled="true"
        android:icon="@drawable/ic_briefcase"
        android:title="@string/shifts"
        android:visible="false" />

    <item
        android:id="@+id/menu_schedule"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/schedule" />

    <item
        android:id="@+id/menu_planning"
        android:enabled="true"
        android:icon="@drawable/ic_fas_planning"
        android:title="@string/planning"
        android:visible="false" />

    <item
        android:id="@+id/menu_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />


</menu>