<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:background="@drawable/circle"
            android:padding="24dp"
            android:src="@drawable/ic_calendar"
            android:backgroundTint="@color/color_primary"
            app:layout_constraintBottom_toTopOf="@id/empty_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:tint="@color/bg_surface" />

        <TextView
            android:id="@+id/empty_text"
            style="@style/Text.Large.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/finished"
            app:layout_constraintBottom_toTopOf="@id/btn_plan_shifts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_icon" />


        <Button
            android:id="@+id/btn_plan_shifts"
            style="@style/Button.Primary.Color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/plan_shifts"
            app:layout_constraintBottom_toTopOf="@id/btn_finish" />

        <Button
            android:id="@+id/btn_finish"
            style="@style/Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>