<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="cz.cvut.fel.kopecm26.bakaplanner.viewmodel.AddSpecializationViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_surface"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include
            android:id="@+id/main_toolbar"
            layout="@layout/toolbar_single"
            app:title="@{@string/add_specialization}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:focusedByDefault="true"
            app:layout_constraintEnd_toStartOf="@id/input_end_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_nonstop"
            app:placeholderText="@string/eg_cleaning">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/actv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/_name"
                android:padding="16dp"
                android:singleLine="true"
                android:text="@={vm.name}">

                <requestFocus />
            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/Text.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="36dp"
            android:justificationMode="inter_word"
            tools:text="@string/specialization_description"
            fromHtml="@{@string/specialization_description}" />

    </LinearLayout>

</layout>